--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,1 +1,73 @@
-#map { height: 320px; }
+body {
+  margin : 0px;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+
+button {
+  bottom : 0px;
+}
+
+header {
+  position: relative;
+  padding-left: 10px;
+}
+
+header h1 {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+button {
+  border-radius: 8px;
+  border: 2px solid #7EBC6F;
+  background-color: #7EBC6F;
+  color: white;
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  transition-duration: 0.4s;
+}
+
+button:hover {
+  border-radius: 8px;
+  border: 2px solid #7EBC6F;
+  background-color: white;
+  color: #7EBC6F;
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+
+}
+
+#map { 
+  margin: 0px;
+  height: 100%;
+  width: 100%; 
+  right : 0px;
+  position: fixed;
+  transition: all .5s linear;
+}
+
+#content {
+  height : 40vh;
+  width: 100vw-20px;
+  bottom: 10px;
+  left: 10px;
+  right : 10px;
+  position: absolute;
+  background-color: white;
+  border-radius: 10px;
+  opacity: 0.9;
+  overflow: auto;
+}
+
+#text {
+  padding: 10px;
+}
+
+.popup {
+  text-align : center;
+}
