--- a/static/css/index.css
+++ b/static/css/index.css
@@ -80,6 +80,22 @@ header h1 {
   padding: 10px;
 }
 
+#comment_section {
+  padding: 10px;
+}
+
+#comment {
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  display: none;
+}
+
+#send_button {
+  margin-top: 10px;
+}
+
 #advanced {
   padding: 10px;
 }
@@ -102,6 +118,10 @@ header h1 {
 
 @media only screen and (min-width: 800px) {
   #settings {
+    grid-template-columns: 0.5fr;
+  }
+
+  #comment {
     grid-template-columns: 0.5fr;
   }
 }
