--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,6 +5,8 @@ body {
 
 button {
   bottom : 0px;
+  margin: 5px;
+  width: 150px;
 }
 
 header {
@@ -101,11 +103,14 @@ header h1 {
 }
 
 #settings {
-  padding: 10px;
+  padding:10px;
+  display: none;
+}
+
+#settings_content {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(6, 1fr);
-  display: none;
 }
 
 #settings_buttons {
@@ -117,7 +122,7 @@ header h1 {
 }
 
 @media only screen and (min-width: 800px) {
-  #settings {
+  #settings_content {
     grid-template-columns: 0.5fr;
   }
 
@@ -127,7 +132,7 @@ header h1 {
 }
 
 @media only screen and (min-width: 1024px) {
-  #settings {
+  #settings_content {
     grid-template-columns: 0.25fr;
   }
 }
